# openevent-sdk

./: .gitignore  Makefile  README.md  README_cn.md  build.sh  generate_python_proto.sh  pyproject.toml  test-e2e.sh  test.sh
docs/: API.md  API_cn.md  USAGE.md  USAGE_cn.md
proto/: openevent.proto
src/openevent/sdk/: __init__.py  client.py
src/openevent/sdk/proto/: __init__.py
tests/: test_e2e.py  test_imports.py
