[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openevent-sdk"
version = "0.3.0"
description = "Python SDK for OpenEvent"
requires-python = ">=3.8"
dependencies = [
    "grpcio",
    "protobuf",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openevent"]
ignore-vcs = true
